--- a/main/locations/index.html
+++ b/main/locations/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Melbourne Cardiology Services, echo, echocardiography, holter monitoring, cardiac services in North Melbourne" />
-    <meta name="description" content="At Melbourne Cardiology Services, we value our patients and strive to serve them well. We offer services in echocardiography, Holter monitoring, stress echocardiography, cardiac CT, as well as consultations across multiple locations. We aim to provide our patients and referring doctors with quick turnarounds and service that embodies our credo of excellence, integrity and quality." />
+    <meta name="description" content="At Melbourne Cardiology Services, we value our patients and strive to serve them well. We offer services in echocardiography, Holter monitoring, stress echocardiography, as well as consultations across multiple locations. We aim to provide our patients and referring doctors with quick turnarounds and service that embodies our credo of excellence, integrity and quality." />
     <meta name="copyright" content="Melbourne Cardiology Services">
     <meta name="language" content="EN">
     <meta name="robots" content="index,follow" />
