--- a/main/contact.html
+++ b/main/contact.html
@@ -639,7 +639,7 @@
                 <div class="col-1"></div>
                 <div class="col-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
-                        If you are a patient or doctor wishing to provide us with feedback of your experience with us, please use the appropriate Feedback form <a href="feedback" class="textlink textb">here</a>.
+                        Phone: <a href="tel:1800880770" class="textlink textb">1800 880 770</a>.
                     </p>
                     <hr style="border: 1px solid var(--color-contrast-higher)" class="mt-5">
                     <div class="container">
