--- a/main/contact.html
+++ b/main/contact.html
@@ -638,9 +638,9 @@
             <div class="container-fluid feature row" style="margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
                 <div class="col-1"></div>
                 <div class="col-10 pt-5 text3 container container--adaptive">
-                    <p class="textp1" style="text-align: center">
+                    <h3 class="textp" style="text-align: center">
                         Phone: <a href="tel:1800880770" class="textlink textb">1800 880 770</a>.
-                    </p>
+                    </h3>
                     <hr style="border: 1px solid var(--color-contrast-higher)" class="mt-5">
                     <div class="container">
                         <div class="row pb-2">
