--- a/main/about.html
+++ b/main/about.html
@@ -668,7 +668,7 @@
                             Kenny was initially trained in paediatric echocardiology by the prominent Dr. T H Goh, and was exposed to a myriad of congenital heart diseases, including some experience with premature babies. He was also among one of the few techs at that time who was also trained in adult echocardiography concurrently. His training also included Holters, ECGs, stress testing, and cath lab monitoring.
                         </p>
                         <p class="text3 text11 mt-3">
-                            Kenny has a keen interest in the area of stress echocardiography and quality assurance in the echo lab. He has continued to maintain a busy load with transthoracic echocardiograms, and has been involved in training and mentoring trainee cardiac sonographers. He is a highly competent cardiac sonographer with strong emphasis on workplace excellence, integrity, and quality.
+                            Kenny has a keen interest in the area of stress echocardiography and quality assurance in the echo lab. He has continued to maintain a busy load with transthoracic echocardiograms, and has been involved in training and mentoring trainee cardiac sonographers. He is a highly competent cardiac sonographer with a strong emphasis on workplace excellence, integrity, and quality.
                         </p>
                     </main>
                     <footer class="modal__footer">
