--- a/main/locations/epworth.html
+++ b/main/locations/epworth.html
@@ -496,6 +496,8 @@
                     <div class="" style="text-align: center">
                         <h4 class="textsb">
                             Suite 6.4 / Level 6, 89 Bridge Rd, Richmond 3121
+                            <br><br>
+                            Phone: <a href="tel:1800880770" class="textlink">1800 880 770</a>
                         </h4>
                         <p class="textp1 mt-4">
                             We are located in the Epworth Consulting Suites, a short walk from the Epworth Hospital #15 tram stop (Routes 48 & 75).
