--- a/main/locations/index.html
+++ b/main/locations/index.html
@@ -490,6 +490,8 @@
                     <div style="text-align: center">
                         <p class="textp1">
                             We consult and deliver tests across 3 locations in Melbourne: <a href="epworth" class="textlink">Epworth Richmond</a>, <a href="nmelb" class="textlink">North Melbourne</a> &amp; <a href="mponds" class="textlink">Moonee Ponds</a>.
+                            <br><br>
+                            <span class="textsb">Phone (All Locations): <a href="tel:1800880770" class="textlink">1800 880 770</a></span>
                         </p>
                     </div>
                     <div class="mapcontainer mt-5">
