--- a/main/about.html
+++ b/main/about.html
@@ -545,7 +545,7 @@
                             </div>
 
                             <div class="feature__media">
-                                <img class="" src="assets/img/Larry.png" style="height: auto; max-width: 200px; margin-left: auto; margin-right: auto">
+                                <img class="" src="assets/img/Larry1.png" style="height: auto; max-width: 200px; margin-left: auto; margin-right: auto">
                                 <!--<figure>
                             <svg width="620" height="420" viewBox="0 0 620 420" preserveAspectRatio="xMinYMin slice">
                                 <rect width="620" height="420" fill="var(--color-contrast-lower)" />
