--- a/main/refer.html
+++ b/main/refer.html
@@ -826,7 +826,7 @@
                                             </div>
                                             
                                             <div class="input-wrapper twin">
-                                                    <input data-parsley-trigger="change" data-parsley-error-message="Medicare/DVA Number required." type="text" name="patient medicare/dva number" title="Patient's last name" id="plastname" value="" aria-required="true" required="" class="form__input">
+                                                    <input data-parsley-trigger="change" data-parsley-error-message="Medicare/DVA Number required." type="text" name="patient medicare/dva number" title="Patient's Medicare/DVA Number" id="plastname" value="" aria-required="true" required="" class="form__input">
                                                     <label class="form__label reqstar" for="plastname">Medicare/DVA Number
                                                         <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                             <g>
