--- a/main/refer.html
+++ b/main/refer.html
@@ -850,8 +850,8 @@
                                             
                                             <div class="input-wrapper">
                                                 <input data-parsley-trigger="change" data-parsley-error-message="Medicare/DVA Expiry required." type="text" title="Patient's Medicare/DVA date of expiry" id="medidvaexp" value="" aria-required="true" required="" class="form__input" oninput="formatDate()">
-                                                <input id="outputDate" type="medidvaexp" name="patient dob" value="" style="display: none">
-                                                <label class="form__label reqstar" for="date">Date of Expiry (dd/mm/yyyy)
+                                                <input id="outputDate" type="date" name="patient dob" value="" style="display: none">
+                                                <label class="form__label reqstar" for="medidvaexp">Date of Expiry (dd/mm/yyyy)
                                                     <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                         <g>
                                                             <path d="M217.625,515.458h-0.06c-6.517,0-12.775-2.65-17.379-7.255L7.147,313.77c-9.586-9.646-9.506-25.211,0.1-34.757
