--- a/main/refer.html
+++ b/main/refer.html
@@ -1067,13 +1067,13 @@
                                                 <div class="twin-wrapper twin hidden">
                                                     <p class="mt-3 textc reqstar">Stress Echocardiography Criteria</p>
                                                     <div>
-                                                        <input type="checkbox" name="chestpain" value="chest pain " class="qcheck" id="chestpaincheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
-                                                        <label for="chestpaincheck" class="textc">Chest discomfort or pains with exertion</label><br>
-                                                        <input type="checkbox" name="knowncad" value="known CAD " class="qcheck" id="knowncadcheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                        <input type="checkbox" name="chestpain" value="chest pain or discomfort with exertion " class="qcheck" id="chestpaincheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
+                                                        <label for="chestpaincheck" class="textc">Chest pain or discomfort with exertion</label><br>
+                                                        <input type="checkbox" name="knowncad" value="known CAD with ?progression of ischaemia " class="qcheck" id="knowncadcheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="knowncadcheck" class="textc">Known CAD with ?progression of ischaemia</label><br>
                                                         <input type="checkbox" name="exertionaldyspnoea" value="exertional dyspnoea " class="qcheck" id="exertionaldyspnoeacheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="exertionaldyspnoeacheck" class="textc">Exertional dyspnoea</label><br>
-                                                        <input type="checkbox" name="abnormalecg" value="abnormal ECG " class="qcheck" id="abnormalecgcheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                        <input type="checkbox" name="abnormalecg" value="abnormal ECG suggestive of CAD " class="qcheck" id="abnormalecgcheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="abnormalecgcheck" class="textc">Abnormal ECG suggestive of CAD</label>
                                                     </div>
                                                 </div>
