--- a/main/index1.html
+++ b/main/index1.html
@@ -684,7 +684,7 @@ if it's not present, don't show loader */
                                 <label aria-hidden="true" class="switch__label" for="themeSwitch">On</label>
                                 <div aria-hidden="true" class="switch__marker"></div>
                             </div>
-                            <label class="vertical-center" style="font-size: 12px; float: right; margin-left: 5px;">Dark Mode</label>
+                            <label class="vertical-center" style="font-size: 12px; float: right; margin-left: 5px;">Light Mode</label>
                         </div>
 
                         <div class="main-footer__socials">
