--- a/main/index5.html
+++ b/main/index5.html
@@ -764,7 +764,7 @@
                                 </p>
                             </div>
                             <div class="main-footer__colophon-nav text col-12 text-center justify-content-center" style="font-size: 12px">
-                                <label style="font-size: 12px; vertical-align: middle; position: relative; display: inline-block; cursor: pointer">Dark Mode
+                                <label style="font-size: 12px; vertical-align: middle; position: relative; display: inline-block; cursor: pointer">Light Mode
                                     <div class="switch">
                                         <input class="switch__input" type="checkbox" id="themeSwitch">
                                         <label aria-hidden="true" class="switch__label" for="themeSwitch">On</label>
