--- a/main/refer.html
+++ b/main/refer.html
@@ -523,16 +523,16 @@
                     </li>-->
                 </ol>
             </nav>
-            <nav class="mobmenu purple">
-                <a href="/"><img src="assets/img/logomark-final%20white.png" style="max-height: 30px; width: auto; margin: 16px 0 0 20px"></a>
-                <div class="button_container purple" id="toggle" data-target="#overlay" aria-controls="navMobile" aria-expanded="false" aria-label="Toggle navigation">
+            <nav class="mobmenu">
+                <a href="/"><img src="assets/img/icon.png" style="max-height: 30px; width: auto; margin: 16px 0 0 20px"></a>
+                <div class="button_container" id="toggle" data-target="#overlay" aria-controls="navMobile" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="top"></span>
                     <span class="middle"></span>
                     <span class="bottom"></span>
                 </div>
             </nav>
 
-            <div class="overlay purple" id="overlay">
+            <div class="overlay" id="overlay">
                 <nav class="overlay-menu">
                     <ul>
                         <li><a href="/">Home</a></li>
