--- a/main/refer.html
+++ b/main/refer.html
@@ -361,7 +361,7 @@
             color: black !important;
         }
 
-        .herotitle:after {
+        /*.herotitle:after {
             background-image: url("assets/img/swoosh-white1.svg");
             background-repeat: no-repeat;
             background-size: 100% 100%;
@@ -372,6 +372,17 @@
             position: absolute;
             top: calc(100% - .15em);
             width: calc(100% + .4em);
+        }*/
+
+        .swooshcontainer {
+            /*postion relative for absolute positioning to work*/
+            position: relative;
+        }
+
+        .swooshcontainer>svg {
+            height: 1em;
+            top: calc(100% - .5em);
+            width: calc(100%);
         }
 
         @media (max-width: 575.98px) {
@@ -549,8 +560,17 @@
             <div class="heropurple">
                 <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
                     <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: -100px; width: 700px; overflow: hidden">
-                    <div class="col-12">
+                    <div class="col-12" style="align-content: center; align-items: center; text-align: center">
                         <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Patient Referral</h1>
+                        <div class="swooshcontainer">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 369.734 19.966">
+                                <g id="Layer_2" data-name="Layer 2">
+                                    <g id="Layer_1-2" data-name="Layer 1" class="swoosh">
+                                        <path d="M1.722,18.466C.146,13.4,7.3,10.437,12.592,10.01A2634.3,2634.3,0,0,1,368.234,5.443" fill="none" stroke="var(--color-contrast-higher)" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
