--- a/main/refer.html
+++ b/main/refer.html
@@ -560,7 +560,7 @@
                 <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
                     <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: -100px; width: 700px; overflow: hidden">
                     <div class="col-12" style="align-content: center; align-items: center; text-align: center">
-                        <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Patient Referral</h1>
+                        <h1 class="textb herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Patient Referral</h1>
                         <div class="swooshcontainer">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 369.734 19.966">
                                 <g id="Layer_2" data-name="Layer 2">
